# Wheel-Wheel-Wheel

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
include/TriW/Snippet/: Config.h  Constraint.h  Macro.h
test/: CMakeLists.txt  hello_test.cpp
test/Snippet/: ConstraintTest.cpp  NoConceptConstraintTest.cpp
